--- a/public/assets/stylesheets/less/actionmenu.less
+++ b/public/assets/stylesheets/less/actionmenu.less
@@ -5,59 +5,85 @@
 *, section.contentbox article header nav {
   ul.actionmenu {
     list-style-type: none;
-    padding: 3px;
+    padding: 2px;
     position: relative;
+    text-align: left;
 
     &:hover {
       background-color: white;
       box-shadow: @shadow;
-      z-index: 999;
+    }
+
+    img, svg {
+      height: 20px;
+      width: 20px;
     }
 
     ul {
       display: none;
       background-color: white;
       box-shadow: @shadow;
-      padding: 3px;
+      padding: 5px;
       width: @item-width;
+      z-index: 999;
+
+      img, svg {
+        padding-right: 10px;
+      }
+
     }
 
-    // Styling for submenus
-    li:hover {
-      // Position submenu to the left of the current entry
-      > ul {
-        display: block;
-        position: absolute;
-        right: @item-width;
-        top: 0;
+    li {
+      padding-left: 5px;
 
-        li {
-          display: block;
-          width: @item-width;
+      > input[type="checkbox"] {
+        display: none;
 
-          a {
-            display: inline;
-            text-align: right;
+        &:checked {
+          // Position submenus to the left of the parent item.
+          ~ ul {
+            display: block;
+            position: absolute;
+            right: @item-width + 6px;
+            top: 0;
 
-            img {
-              padding-left: 5px;
+            li {
+              display: block;
+              padding: 3px;
+              width: @item-width;
+
+              a {
+                display: inline;
+                padding-left: 0;
+              }
             }
           }
         }
       }
 
-      &:not(:first-child) > ul {
-        top: 2em;
+      // Submenus of non-first items need some vertical offset.
+      &:not(:first-child) {
+        > input[type="checkbox"] {
+          &:checked {
+            ~ ul {
+              top: 2em;
+            }
+          }
+        }
       }
     }
 
-    // First submenu is positioned directly under action icon
-    > li:hover {
-      > ul {
-        display: block;
-        position: absolute;
-        right: 0;
-        top: inherit;
+    > li {
+      > input[type="checkbox"] {
+        &:checked {
+          // First submenu is positioned directly under action icon
+          ~ ul {
+            display: block;
+            position: absolute;
+            right: 0;
+            top: inherit;
+          }
+        }
       }
     }
   }
