--- a/public/assets/stylesheets/less/statusgroups.less
+++ b/public/assets/stylesheets/less/statusgroups.less
@@ -2,6 +2,25 @@ section.course-statusgroups {
 
   article {
 
+    header {
+      h1 {
+        a {
+          display: inline;
+
+          &.no-contentbox-link {
+            &::before {
+              background-image: none;
+              width: 0;
+            }
+          }
+
+          img {
+            vertical-align: bottom;
+          }
+        }
+      }
+    }
+
     input.groupselector {
       float: left;
     }
@@ -50,24 +69,21 @@ section.course-statusgroups {
           }
         }
       }
+
+      div.statusgroup-no-members {
+        font-style: italic;
+        margin: 15px;
+      }
     }
   }
 
   footer {
-
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 5px;
-    padding-left: 18px;
     background-color: @content-color-20;
     border-top: 1px solid @black;
     font-size: medium;
-
-    div.groupactions {
-      margin-left: auto;
-    }
-
+    padding: 5px;
+    padding-left: 18px;
+    text-align: left;
   }
 
 }
