--- a/public/assets/stylesheets/less/header.less
+++ b/public/assets/stylesheets/less/header.less
@@ -24,13 +24,12 @@
     #barBottomLeft {
         padding: 0 15px;
         // Adds an arrow at the end
-
+        #arrow > .right(12px, @brand-color-lighter, 0);
         z-index: 2;
     }
 
     #barBottomArrow {
         #gradient > .horizontal(@brand-color-light, @brand-color-lighter);
-        #arrow > .right(12px, @brand-color-lighter, 0);
         width: 30px;
     }
 
@@ -258,7 +257,7 @@
         // Adds an arrow at the end
         #arrow > .right(12px, @public_course_bgcolor, 0);
     }
-    #barBottommiddle:before { 
+    #barBottomArrow {
         // Adds the fading background to the left
         #gradient > .horizontal(darken(@public_course_bgcolor, 10%), @public_course_bgcolor);
     }
