--- a/public/assets/stylesheets/mixins/arrow.less
+++ b/public/assets/stylesheets/mixins/arrow.less
@@ -54,6 +54,7 @@
     .right-pseudo(@width, @color) {
         #arrow > .pseudo(@width, @color);
         border-left-color: @color;
+        left: 100%;
         top: 50%;
         margin-top: (-@width);
     }
