place icon to the right for slef-created activities

--- a/public/plugins_packages/core/ActivityFeed/css/style.less
+++ b/public/plugins_packages/core/ActivityFeed/css/style.less
@@ -27,7 +27,14 @@
             background: @base-color;
             position: absolute;
             top: -20px;
-            left: -15px;
+            
+            &.left {
+                left: -15px;
+            }
+            
+            &.right {
+                right: -15px;
+            }
 
             img {
                 padding: 12px;
