--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -3163,11 +3163,6 @@ section.contentbox article header nav ul.actionmenu {
   position: relative;
   text-align: left;
 }
-* ul.actionmenu:hover,
-section.contentbox article header nav ul.actionmenu:hover {
-  background-color: white;
-  box-shadow: 1px 1px 0 #8b8f95;
-}
 * ul.actionmenu img,
 section.contentbox article header nav ul.actionmenu img,
 * ul.actionmenu svg,
@@ -3179,16 +3174,16 @@ section.contentbox article header nav ul.actionmenu svg {
 section.contentbox article header nav ul.actionmenu ul {
   display: none;
   background-color: white;
-  box-shadow: 1px 1px 0 #8b8f95;
+  box-shadow: 1px 1px 0 #8a8e95;
   padding: 5px;
-  width: 150px;
+  width: 180px;
   z-index: 999;
 }
 * ul.actionmenu ul img,
 section.contentbox article header nav ul.actionmenu ul img,
 * ul.actionmenu ul svg,
 section.contentbox article header nav ul.actionmenu ul svg {
-  padding-right: 10px;
+  padding-right: 5px;
 }
 * ul.actionmenu li,
 section.contentbox article header nav ul.actionmenu li {
@@ -3202,14 +3197,14 @@ section.contentbox article header nav ul.actionmenu li > input[type="checkbox"] 
 section.contentbox article header nav ul.actionmenu li > input[type="checkbox"]:checked ~ ul {
   display: block;
   position: absolute;
-  right: 150px + 6px;
+  right: 186px;
   top: 0;
 }
 * ul.actionmenu li > input[type="checkbox"]:checked ~ ul li,
 section.contentbox article header nav ul.actionmenu li > input[type="checkbox"]:checked ~ ul li {
   display: block;
   padding: 3px;
-  width: 150px;
+  width: 180px;
 }
 * ul.actionmenu li > input[type="checkbox"]:checked ~ ul li a,
 section.contentbox article header nav ul.actionmenu li > input[type="checkbox"]:checked ~ ul li a {
@@ -3220,11 +3215,20 @@ section.contentbox article header nav ul.actionmenu li > input[type="checkbox"]:
 section.contentbox article header nav ul.actionmenu li:not(:first-child) > input[type="checkbox"]:checked ~ ul {
   top: 2em;
 }
+* ul.actionmenu > li,
+section.contentbox article header nav ul.actionmenu > li {
+  padding: 2px;
+}
+* ul.actionmenu > li.active,
+section.contentbox article header nav ul.actionmenu > li.active {
+  background-color: white;
+  box-shadow: 1px 1px 0 #8a8e95;
+}
 * ul.actionmenu > li > input[type="checkbox"]:checked ~ ul,
 section.contentbox article header nav ul.actionmenu > li > input[type="checkbox"]:checked ~ ul {
   display: block;
   position: absolute;
-  right: 0;
+  right: 2px;
   top: inherit;
 }
 /* --- AJAX indicator ------------------------------------------------------- */
