--- a/public/plugins_packages/core/ActivityFeed/css/style.less
+++ b/public/plugins_packages/core/ActivityFeed/css/style.less
@@ -27,6 +27,7 @@
             background: @base-color;
             position: absolute;
             top: -20px;
+            border: 3px solid white;
             
             &.left {
                 left: -15px;
