--- a/public/assets/stylesheets/less/actionmenu.less
+++ b/public/assets/stylesheets/less/actionmenu.less
@@ -1,3 +1,5 @@
+@import url(../mixins/colors.less);
+
 @shadow: 1px 1px 0 @dark-gray-color-60;
 @item-width: 180px;
 
@@ -16,6 +18,7 @@
 
     li {
       padding: 3px;
+      width: @item-width;
 
       ul {
         display: none;
@@ -41,14 +44,19 @@
     }
 
     > li {
-      span.title {
-        border: 0;
-        display: none;
-        font-weight: bold;
-      }
+      width: 20px;
 
-      > img, > svg, > a > img, > a > svg {
-        float: right;
+      div {
+        border: 0;
+        height: 20px;
+
+        &.action-title {
+          display: none;
+          font-weight: bold;
+          padding-left: 5px;
+          width: @item-width - 24px;
+        }
+
       }
 
       &.active {
@@ -56,8 +64,8 @@
         box-shadow: @shadow;
         width: @item-width+4px;
 
-        span.title {
-          display: inline;
+        div.action-title {
+          display: inline-block;
         }
       }
     }
