--- a/public/plugins_packages/core/Forum/stylesheets/forum.less
+++ b/public/plugins_packages/core/Forum/stylesheets/forum.less
@@ -313,17 +313,14 @@ html.no-js #forum {
 
     a.marked div {
         cursor: pointer;
-        background-color: white;
+        .background-icon('staple', 'clickable', 32px);
         position: absolute;
-        top: 0px;
-        right: 0px;
-        height: 0px;
-        width: 0px;
-        -moz-box-shadow: -5px 5px 5px #888888;
-        -webkit-box-shadow: -5px 5px 5px #888888;
-        box-shadow: -5px 5px 5px #888888;
-        border-left: solid 40px #dee2e8;
-        border-top: solid 40px transparent;
+        top: -10px;
+        right: 10px;
+        height: 32px;
+        width: 32px;
+        transform: rotate(140deg);
+
     }
 
     .new_posting {
