--- a/public/assets/stylesheets/less/actionmenu.less
+++ b/public/assets/stylesheets/less/actionmenu.less
@@ -31,6 +31,7 @@
         box-shadow: @shadow;
         list-style-type: none;
         padding: 5px;
+        position: absolute;
         z-index: 999;
 
         img, svg {
@@ -40,13 +41,15 @@
       }
 
       &.active {
-        ul {
+        position: relative;
+
+        > ul {
           align-items: stretch;
           display: flex;
           flex-direction: column;
           position: absolute;
           right: 2px;
-          top: ~"calc(2em + 1px)";
+          top: 0;
         }
       }
     }
@@ -84,6 +87,11 @@
 
         div.action-title {
           display: inline-block;
+        }
+
+        > ul {
+          right: 0;
+          top: ~"calc(2em - 1px)";
         }
       }
     }
