--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -3169,6 +3169,7 @@ section.contentbox article header nav ul.actionmenu li ul {
   box-shadow: 1px 1px 1px #8a8e95;
   list-style-type: none;
   padding: 5px;
+  position: absolute;
   z-index: 999;
 }
 * ul.actionmenu li ul img,
@@ -3178,14 +3179,18 @@ section.contentbox article header nav ul.actionmenu li ul svg {
   padding-right: 5px;
   vertical-align: bottom;
 }
-* ul.actionmenu li.active ul,
-section.contentbox article header nav ul.actionmenu li.active ul {
+* ul.actionmenu li.active,
+section.contentbox article header nav ul.actionmenu li.active {
+  position: relative;
+}
+* ul.actionmenu li.active > ul,
+section.contentbox article header nav ul.actionmenu li.active > ul {
   align-items: stretch;
   display: flex;
   flex-direction: column;
   position: absolute;
   right: 2px;
-  top: calc(2em + 1px);
+  top: 0;
 }
 * ul.actionmenu > li,
 section.contentbox article header nav ul.actionmenu > li {
@@ -3224,6 +3229,11 @@ section.contentbox article header nav ul.actionmenu > li.active > svg {
 * ul.actionmenu > li.active div.action-title,
 section.contentbox article header nav ul.actionmenu > li.active div.action-title {
   display: inline-block;
+}
+* ul.actionmenu > li.active > ul,
+section.contentbox article header nav ul.actionmenu > li.active > ul {
+  right: 0;
+  top: calc(2em - 1px);
 }
 /* --- AJAX indicator ------------------------------------------------------- */
 #ajax_notification {
