--- a/public/assets/stylesheets/less/coursewizard.less
+++ b/public/assets/stylesheets/less/coursewizard.less
@@ -27,3 +27,58 @@ div {
     width: ~"calc(50% - 20px)";
   }
 }
+
+/*
+change order for AdvancedBasicDataWizardStep
+so we do not have to copy the basicdata/index.php
+*/
+form.course-wizard-step-0 {
+   .flex();
+   .flex-direction-column();
+    
+   > * {
+        order: 1;
+    }
+    section:nth-of-type(2) {
+        order: 2;
+    }
+    section:nth-of-type(3) {
+        order: 3;
+    }
+    section:nth-of-type(4) {
+        order: 5;
+    }
+    section:nth-of-type(5) {
+        order: 9;
+    }
+    section:nth-of-type(6) {
+        order: 10;
+    }
+    section:nth-of-type(7) {
+        order: 11;
+    }
+    section:nth-of-type(8) {
+        order: 12;
+    }
+    section:nth-of-type(9) {
+        order: 13;
+    }
+    section:nth-of-type(10) {
+        order: 11
+    }
+    section:nth-of-type(11) {
+        order: 4;
+    }
+    section:nth-of-type(12) {
+        order: 6;
+    }
+    section:nth-of-type(13) {
+        order: 7;
+    }
+    section:nth-of-type(14) {
+        order: 8;
+    }
+    footer {
+        order: 100;
+    }
+}
