fixes #6657 : better and wider icons and putting the radio-button to the right side. Also fixing the broken label-tag

--- a/public/assets/stylesheets/less/raumzeit.less
+++ b/public/assets/stylesheets/less/raumzeit.less
@@ -92,3 +92,9 @@ a.bookable_rooms_action {
         }
     }
 }
+
+.flex-row {
+    .flex();
+    .flex-justify-content(space-between);
+    width: 100%;
+}
