--- a/public/assets/stylesheets/style.less
+++ b/public/assets/stylesheets/style.less
@@ -63,6 +63,7 @@
 @import "less/coursewizard.less";
 @import "less/smileys.less";
 @import "less/big-image-handler.less";
+@import "less/i18n.less";
 
 @import "less/responsive.less";
 
