--- a/public/assets/stylesheets/print.css
+++ b/public/assets/stylesheets/print.css
@@ -260,9 +260,19 @@ td.quote {
 }
 a.link-intern {
   padding-left: 18px;
-  background: url("../images/icons/16/blue/link-intern.png") no-repeat;
+  background-image: url("../images/icons/blue/link-intern.svg");
+  -webkit-background-size: 16px 16px;
+  -moz-background-size: 16px 16px;
+  -o-background-size: 16px 16px;
+  background-size: 16px 16px;
+  background-repeat: no-repeat;
 }
 a.link-extern {
   padding-left: 18px;
-  background: url("../images/icons/16/blue/link-extern.png") no-repeat;
+  background-image: url("../images/icons/blue/link-extern.svg");
+  -webkit-background-size: 16px 16px;
+  -moz-background-size: 16px 16px;
+  -o-background-size: 16px 16px;
+  background-size: 16px 16px;
+  background-repeat: no-repeat;
 }
