--- a/public/assets/stylesheets/print.less
+++ b/public/assets/stylesheets/print.less
@@ -1,3 +1,5 @@
+@import "mixins.less";
+
 /*******************************************************************************
     Druck-Stylesheet für Stud.IP
     - nur pt Größenangaben verwenden
@@ -266,10 +268,12 @@ td.quote {
 
 a.link-intern {
   padding-left:18px;
-  background:url("../images/icons/16/blue/link-intern.png") no-repeat;
+  .background-icon('link-intern', 'clickable');
+  background-repeat: no-repeat;
 }
 
 a.link-extern {
   padding-left:18px;
-  background:url("../images/icons/16/blue/link-extern.png") no-repeat;
+  .background-icon('link-extern', 'clickable');
+  background-repeat: no-repeat;
 }
